Stop dropping abstract Azure types, and build the metadata immutably
The Azure registrar was scanning with the default candidate filter, which
rejects abstract types. INVOKE_DECLARED_METHODS does not cross the class
boundary, so an abstract base in one of those hierarchies took its methods
out of the image with it - five classes, as it turns out. The sibling
registrars already override this; now all three agree.

The AWT metadata generator also built its type list by mutating a
collection, which AGENTS.md rules out. It now concatenates the two streams
instead; the generated file is byte-identical.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01LqcMj2hxV4guaT83SVCZ8f